# demo-fastap-html-response

app/: Makefile  main.py  pyproject.toml
app/templates/: index.html
