[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kavisek <kavi.skhon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
pandas = "^1.4.4"
uvicorn = "^0.18.3"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
